src/test/ui/issues/issue-29723.stderr
error[E0382]: use of moved value: `s`
  --> $DIR/issue-29723.rs:12:13
   |
LL |     let s = String::new();
   |         - move occurs because `s` has type `std::string::String`, which does not implement the `Copy` trait
LL |     let _s = match 0 {
LL |         0 if { drop(s); false } => String::from("oops"),
   |                     - value moved here
...
LL |             s
   |             ^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
